# communication_nfc

./: CODEOWNERS  OAT.xml  README.md  README_zh.md  bundle.json  hisysevent.yaml  nfc.gni
connected_tag/interfaces/innerkits/: BUILD.gn
connected_tag/services/: BUILD.gn
connected_tag/services/include/: connected_tag_service_impl.h  connected_tag_session_stub.h  permission_tools.h
connected_tag/services/src/: connected_tag_service_impl.cpp  connected_tag_session_stub.cpp  permission_tools.cpp
frameworks/ani/nfc_tag/: BUILD.gn
frameworks/cj/controller/: BUILD.gn  cj_nfc_controller.cpp  cj_nfc_controller.h  cj_nfc_controller_event.cpp  cj_nfc_controller_event.h  cj_nfc_controller_ffi.cpp
interfaces/inner_api/: BUILD.gn
interfaces/inner_api/cardEmulation/: BUILD.gn  cardEmulation.cpp  cardEmulation.h  hce_cmd_callback_stub.cpp  hce_cmd_callback_stub.h  hce_service.cpp  hce_service.h  hce_session_proxy.cpp  hce_session_proxy.h
interfaces/inner_api/common/: BUILD.gn  ce_payment_services_parcelable.cpp  ce_payment_services_parcelable.h  iforeground_callback.h  ihce_cmd_callback.h  ihce_session.h  inci_ce_interface.h  inci_native_interface.h  inci_nfcc_interface.h  inci_tag_interface.h  indef_msg_callback.h  infc_controller_service.h  ion_card_emulation_notify_cb.h  iquery_app_info_callback.h  ireader_mode_callback.h  itag_host.h  itag_session.h  loghelper.h  ndef_message.cpp  ndef_message.h  ndef_record_parser.cpp  ndef_record_parser.h  nfc_basic_proxy.cpp  nfc_basic_proxy.h  nfc_sdk_common.cpp  nfc_sdk_common.h  nfc_service_ipc_interface_code.h  start_hce_info_parcelable.cpp  start_hce_info_parcelable.h  taginfo.cpp  taginfo.h  taginfo_parcelable.cpp  taginfo_parcelable.h
interfaces/inner_api/controller/: BUILD.gn  ndef_msg_callback_stub.cpp  ndef_msg_callback_stub.h  nfc_controller.cpp  nfc_controller.h  nfc_controller_callback_stub.cpp  nfc_controller_callback_stub.h  nfc_controller_proxy.cpp  nfc_controller_proxy.h  nfc_data_share_impl.cpp  nfc_data_share_impl.h  nfc_sa_client.cpp  nfc_sa_client.h  nfc_state_change_callback.h  on_card_emulation_notify_cb_stub.cpp  on_card_emulation_notify_cb_stub.h  query_app_info_callback_stub.cpp  query_app_info_callback_stub.h
interfaces/inner_api/include/: nfc_basic_proxy.h  nfc_data_share_impl.h  nfc_sdk_common.h  nfc_service_ipc_interface_code.h
interfaces/inner_api/src/: nfc_basic_proxy.cpp  nfc_data_share_impl.cpp  nfc_sa_client.cpp  nfc_sdk_common.cpp
interfaces/inner_api/tags/: BUILD.gn  barcode_tag.cpp  barcode_tag.h  basic_tag_session.cpp  basic_tag_session.h  foreground_callback_stub.cpp  foreground_callback_stub.h  iso15693_tag.cpp  iso15693_tag.h  isodep_tag.cpp  isodep_tag.h  mifare_classic_tag.cpp  mifare_classic_tag.h  mifare_ultralight_tag.cpp  mifare_ultralight_tag.h  ndef_formatable_tag.cpp  ndef_formatable_tag.h  ndef_tag.cpp  ndef_tag.h  nfca_tag.cpp  nfca_tag.h  nfcb_tag.cpp  nfcb_tag.h  nfcf_tag.cpp  nfcf_tag.h  reader_mode_callback_stub.cpp  reader_mode_callback_stub.h  tag_foreground.cpp  tag_foreground.h  tag_session_proxy.cpp  tag_session_proxy.h
nfc_core/services/: BUILD.gn
nfc_core/services/include/: app_data_parser.h  common_event_handler.h  infc_service.h  nfc_controller_death_recipient.h  nfc_sa_manager.h  nfc_service.h
nfc_core/services/src/: app_data_parser.cpp  common_event_handler.cpp  nfc_sa_manager.cpp  nfc_service.cpp
services/: BUILD.gn  libnfc_service_version_script.txt  nfc_card_apdu.json
services/connected_tag/: BUILD.gn
services/connected_tag/include/: connected_tag_callback_proxy.h  connected_tag_service_impl.h  connected_tag_session_stub.h
services/connected_tag/src/: connected_tag_callback_proxy.cpp  connected_tag_service_impl.cpp  connected_tag_session_stub.cpp  permission_tools.cpp
services/etc/init/: BUILD.gn  nfc_service.cfg  nfc_service.rc
services/include/: app_data_parser.h  bt_connection_manager.h  common_event_handler.h  foreground_death_recipient.h  infc_app_state_observer.h  infc_service.h  isodep_card_handler.h  ndef_bt_data_parser.h  ndef_bt_oob_data_parser.h  ndef_har_data_parser.h  ndef_har_dispatch.h  ndef_wifi_data_parser.h  nfc_controller_death_recipient.h  nfc_event_handler.h  nfc_nci_adaptor.h  nfc_polling_manager.h  nfc_polling_params.h  nfc_routing_manager.h  nfc_sa_manager.h  nfc_service.h  nfc_timer.h  reader_mode_death_recipient.h  run_on_demaind_manager.h  tag_dispatcher.h  tag_notification.h  vendor_ext_service.h  wifi_connection_manager.h
services/nfc_core/: BUILD.gn
services/nfc_core/include/: infc_service.h  nfc_sa_manager.h
services/nfc_core/src/: nfc_sa_manager.cpp  nfc_service.cpp
services/res/: nfc_card_apdu.json
services/res/en/: string_en.json
services/res/zh/: string_zh.json
services/src/: app_data_parser.cpp  common_event_handler.cpp  ndef_bt_oob_data_parser.cpp  nfc_event_handler.cpp  nfc_polling_manager.cpp  nfc_polling_params.cpp  nfc_routing_manager.cpp  nfc_sa_manager.cpp  nfc_service.cpp  run_on_demaind_manager.cpp  tag_dispatcher.cpp
services/src/card_emulation/: app_state_aware.cpp  app_state_aware.h  ce_service.cpp  ce_service.h  default_payment_service_change_callback.h  host_card_emulation_manager.cpp  host_card_emulation_manager.h  idefault_payment_service_change_callback.h  nfc_ability_connection_callback.cpp  nfc_ability_connection_callback.h  setting_data_share_impl.cpp  setting_data_share_impl.h
services/src/controller/: nfc_controller_callback_proxy.cpp  nfc_controller_callback_proxy.h  nfc_controller_death_recipient.cpp  (+4 more)
services/tools_run_on_demaind/: BUILD.gn  app_data_parser.cpp  app_data_parser.h  nfc_data_share_impl.cpp  nfc_database_helper.cpp  nfc_database_helper.h  nfc_event_publisher.cpp  nfc_event_publisher.h  nfc_hisysevent.cpp  nfc_hisysevent.h  permission_tools.cpp  permission_tools.h  run_on_demaind_proxy.cpp  run_on_demaind_proxy.h  tag_ability_dispatcher.cpp  tag_ability_dispatcher.h
test/fuzztest/: BUILD.gn  nfcfuzz.gni
test/utils/: BUILD.gn  nfc_access_token_mock.cpp  nfc_access_token_mock.h  utils.gni
tools/ohos-nfcManager/: BUILD.gn  ohos-nfcManager.json
(+903 files in other folders)
