# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

ROOT = "//foundation/communication/nfc/connected_tag/services"

ohos_shared_library("nfc_connected_tag_service") {
  include_dirs = [
    "//foundation/communication/nfc/connected_tag/interfaces/innerkits/interfaces",
    "//foundation/communication/nfc/connected_tag/interfaces/innerkits/include",
    "$ROOT/src/hardware/include",
    "include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
  ]

  sources = [
    "src/connected_tag_callback_proxy.cpp",
    "src/connected_tag_service_impl.cpp",
    "src/connected_tag_session_stub.cpp",
    "src/permission_tools.cpp",
  ]

  deps = [
    "$ROOT/etc/init:etc",
    "$ROOT/src/hardware:connected_tag_hdi_adapter",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  part_name = "nfc_connected_tag"
  subsystem_name = "communication"
}
