# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

config("nfc_inner_kits_config") {
  visibility = [ ":*" ]
  defines = [ "DEBUG" ]
  cflags_cc = [ "-fexceptions" ]

  include_dirs = []
}

config("nfc_inner_kits_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "include/controller",
    "include/tags",
    "include/cardEmulation",
  ]
}

ohos_shared_library("nfc_inner_kits") {
  sources = [
    "src/cardEmulation/cardEmulation.cpp",
    "src/controller/nfc_controller.cpp",
    "src/controller/nfc_controller_callback_stub.cpp",
    "src/controller/nfc_controller_proxy.cpp",
    "src/nfc_basic_proxy.cpp",
    "src/nfc_sdk_common.cpp",
    "src/tags/basic_tag_session.cpp",
    "src/tags/iso15693_tag.cpp",
    "src/tags/isodep_tag.cpp",
    "src/tags/mifare_classic_tag.cpp",
    "src/tags/mifare_ultralight_tag.cpp",
    "src/tags/ndef_formatable_tag.cpp",
    "src/tags/ndef_message.cpp",
    "src/tags/ndef_tag.cpp",
    "src/tags/nfca_tag.cpp",
    "src/tags/nfcb_tag.cpp",
    "src/tags/nfcf_tag.cpp",
    "src/tags/tag_session_proxy.cpp",
    "src/tags/taginfo.cpp",
  ]

  configs = [ ":nfc_inner_kits_config" ]

  public_configs = [ ":nfc_inner_kits_public_config" ]

  deps = []

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  part_name = "nfc"
  subsystem_name = "communication"
}
