# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../nfc.gni")

config("nfc_on_demaind_config") {
  visibility = [ ":*" ]

  defines = [ "DEBUG" ]

  include_dirs = [ "$NFC_DIR/interfaces/inner_api/common" ]
}

ohos_shared_library("nfc_tools_on_demaind") {
  sanitize = {
    cfi = true
    boundary_sanitize = true
    integer_overflow = true
    cfi_cross_dso = true
    debug = false
  }
  stack_protector_ret = true
  sources = [
    "app_data_parser.cpp",
    "nfc_data_share_impl.cpp",
    "nfc_database_helper.cpp",
    "nfc_event_publisher.cpp",
    "nfc_hisysevent.cpp",
    "permission_tools.cpp",
    "run_on_demaind_proxy.cpp",
    "tag_ability_dispatcher.cpp",
  ]

  public_configs = [ ":nfc_on_demaind_config" ]

  deps = [ "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common" ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "miscdevice:vibrator_interface_native",
    "preferences:native_preferences",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  part_name = "nfc"
  subsystem_name = "communication"
}
