# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

group("fuzztest") {
  testonly = true
  deps = [
    "controller_test/nfccontroller:nfccontroller_fuzztest",
    "tags_test/basictagsession:basictagsession_fuzztest",
    "tags_test/iso15693tag:iso15693tag_fuzztest",
    "tags_test/isodeptag:isodeptag_fuzztest",
    "tags_test/mifareclassictag:mifareclassictag_fuzztest",
    "tags_test/mifareultralighttag:mifareultralighttag_fuzztest",
    "tags_test/ndefmessage:ndefmessage_fuzztest",
    "tags_test/ndeftag:ndeftag_fuzztest",
    "tags_test/nfca_tag:nfca_tag_fuzztest",
    "tags_test/taginfo:taginfo_fuzztest",
  ]
}
