# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../nfc.gni")

fuzz_include_dirs = [
  "$NFC_DIR/interfaces/inner_api/cardEmulation",
  "$NFC_DIR/interfaces/inner_api/common",
  "$NFC_DIR/interfaces/inner_api/controller",
  "$NFC_DIR/interfaces/inner_api/tags",
  "$NFC_DIR/services/include",
  "$NFC_DIR/services/src/nci_adapter/nci_native_default/include",
  "$NFC_DIR/services/src",
  "$NFC_DIR/services/src/external_deps",
  "$NFC_DIR/services/src/tag",
]

fuzz_deps = [
  "$NFC_DIR/interfaces/inner_api/common:nfc_inner_kits_common",
  "$NFC_DIR/interfaces/inner_api/cardEmulation:libnfc_hce_interface_proxy",
  "$NFC_DIR/interfaces/inner_api/cardEmulation:libnfc_hce_interface_stub",
  "$NFC_DIR/interfaces/inner_api/cardEmulation:nfc_inner_kits_card_emulation",
  "$NFC_DIR/interfaces/inner_api/controller:libnfc_controller_interface_proxy",
  "$NFC_DIR/interfaces/inner_api/controller:libnfc_controller_interface_stub",
  "$NFC_DIR/interfaces/inner_api/controller:nfc_inner_kits_controller",
  "$NFC_DIR/interfaces/inner_api/tags:libnfc_tag_interface_proxy",
  "$NFC_DIR/interfaces/inner_api/tags:libnfc_tag_interface_stub",
  "$NFC_DIR/interfaces/inner_api/tags:nfc_inner_kits_tags",
  "$NFC_DIR/services:nfc_service_static",
]

fuzz_external_deps = [
  "ability_base:want",
  "ability_base:zuri",
  "ability_runtime:ability_manager",
  "ability_runtime:app_manager",
  "ability_runtime:dataobs_manager",
  "access_token:libaccesstoken_sdk",
  "bundle_framework:appexecfwk_base",
  "bundle_framework:appexecfwk_core",
  "cJSON:cjson_static",
  "c_utils:utils",
  "common_event_service:cesfwk_core",
  "common_event_service:cesfwk_innerkits",
  "data_share:datashare_consumer",
  "eventhandler:libeventhandler",
  "ffrt:libffrt",
  "hilog:libhilog",
  "hisysevent:libhisysevent",
  "init:libbegetutil",
  "ipc:ipc_core",
  "miscdevice:vibrator_interface_native",
  "power_manager:powermgr_client",
  "preferences:native_preferences",
  "safwk:system_ability_fwk",
  "samgr:samgr_proxy",
  "screenlock_mgr:screenlock_client",
]

if (nfc_service_feature_ndef_wifi_enabled) {
  fuzz_external_deps += [ "wifi:wifi_sdk" ]
}

if (nfc_service_feature_ndef_bt_enabled) {
  fuzz_external_deps += [ "bluetooth:btframework" ]
}

fuzz_cflags = [
  "-g",
  "-O0",
  "-Wno-unused-variable",
  "-fno-omit-frame-pointer",
]