# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/cli/ohos_cli_executable.gni")

ohos_cli_executable("ohos-nfcManager") {
    branch_protector_ret = "pac_ret"
    cli_config_file = "ohos-nfcManager.json"

    sanitize = {
        cfi = true
        cfi_cross_dso = true
        debug = false
    }

    install_enable = true
    install_images = [ "system" ]
    subsystem_name = "communication"
    part_name = "nfc"

    sources = [ "src/main.cpp" ]
    
    cflags = [
        "-fPIC",
        "-g",
    ]
    cflags += [ "-Wall" ]
    if (target_cpu == "arm") {
        cflags += [ "-DBINDER_IPC_32BIT" ]
    }
    cflags_cc = cflags

    include_dirs = [
        "//foundation/communication/nfc/interfaces/inner_api/controller",
        "//foundation/communication/nfc/interfaces/inner_api/common",
    ]

    deps = [
        "//foundation/communication/nfc/interfaces/inner_api/controller:nfc_inner_kits_controller",
    ]

    external_deps = [
        "c_utils:utils",
        "hilog:libhilog",
        "ipc:ipc_single",
        "samgr:samgr_proxy",
    ]
}