# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")

config("connected_tag_base_config") {
  cflags_cc = [
    "-fPIC",
    "-Wno-unused-parameter",
    "-Wunused-private-field",
  ]
  include_dirs = [
    "//utils/system/safwk/native/include",
    "//foundation/communication/nfc/connected_tag/interfaces/innerkits/interfaces",
    "//foundation/communication/nfc/connected_tag/interfaces/innerkits/include",
  ]
}

config("connected_tag_base_public_config") {
  include_dirs = []
}

ohos_shared_library("connected_tag_base") {
  configs = [ ":connected_tag_base_config" ]
  public_configs = [ ":connected_tag_base_public_config" ]
  sources = [
    "src/connected_tag_callback_stub.cpp",
    "src/connected_tag_impl.cpp",
    "src/tag_session_proxy.cpp",
  ]

  deps = []

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "utils_base:utils",
  ]

  subsystem_name = "communication"
  part_name = "nfc_connected_tag"
}
